examples/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test
  name: test
spec:
  clusterIP: None
  type: ClusterIP
  ipFamilyPolicy: "SingleStack"
