examples/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-main-0
  namespace: shoot--ondemand--test01
spec:
  type: LoadBalancer
  selector:
    statefulset.kubernetes.io/pod-name: etcd-main-0
  ports:
    - port: 2380
      name: server
      targetPort: 2380
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-main-1
  namespace: shoot--ondemand--test01
spec:
  type: LoadBalancer
  selector:
    statefulset.kubernetes.io/pod-name: etcd-main-1
  ports:
    - port: 2380
      name: server
      targetPort: 2380
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-main-2
  namespace: shoot--ondemand--test01
spec:
  type: LoadBalancer
  selector:
    statefulset.kubernetes.io/pod-name: etcd-main-2
  ports:
    - port: 2380
      name: server
      targetPort: 2380
  externalTrafficPolicy: Local
